# qt6-template

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  FindVulkan.cmake  Pipfile  README.md  VulkanHeaders-release-x86_64-data.cmake  VulkanHeadersConfig.cmake  VulkanLoader-Target-release.cmake  VulkanLoaderConfig.cmake  VulkanLoaderConfigVersion.cmake  app.env  before  build.sh  conan-lock-update.sh  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanfile.py  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  env.sh  fmt-release-x86_64-data.cmake  install_qt.sh  main.cpp  module-Vulkan-Target-release.cmake  module-Vulkan-release-x86_64-data.cmake  run.sh  setup.sh  test  vcvars.sh  xorg-release-x86_64-data.cmake
.cache/clangd/index/: AppMainWindow.cpp.A3B3C314C2F37C3D.idx  AppMainWindow.h.16EC30D958C785E7.idx  CounterModel.cpp.F441719020FBD44D.idx  CounterModel.h.31E8A5F49379C612.idx  CounterPresenter.cpp.3F3FA25040D27CFD.idx  CounterPresenter.h.EF2F47526C2AEA3D.idx  CounterWidget.cpp.8D4FA577793552FE.idx  CounterWidget.h.118CD5D74096B160.idx  ICounterModel.h.1FAC85B28590F76B.idx  ICounterPresenter.h.D09F62FF0BB3679F.idx  ICounterWidget.h.89A46CE294E3532E.idx  QApplication.998523C1C6025CFE.idx  QFile.4033C2ED6A592A6E.idx  QGuiApplication.BEE854B9951D08F0.idx  QIcon.C91A65D4D4669B38.idx  QLabel.2395AA33A84A1759.idx  QLocale.230A242F9B68A23A.idx  QMainWindow.6F628224C0289377.idx  QMenuBar.900C768BDFD49268.idx  QObject.7D41DF96AFB49428.idx  QPushButton.3117505870428ADC.idx  QSpacerItem.8E87864018F10B33.idx  QStatusBar.ADECA12E40E58B27.idx  QTranslator.C82029A40CBEBAF6.idx  QVBoxLayout.47BBE17A84162112.idx  QVariant.033EE1E4CF7D4CBD.idx  QWidget.6B99492A76107376.idx  main.cpp.2696052EF2F24D8D.idx  q17memory.h.FC5595A077DC66A3.idx  q20functional.h.82B90B7ACB19CEC1.idx  q20iterator.h.5622834046902E61.idx  q20memory.h.09CE66D9A2C18B9F.idx  q20type_traits.h.F9B41459BF2C7E5E.idx  q20utility.h.9FB0A5BC3D8E81DF.idx  q23utility.h.BF23DBA1ED23BF30.idx  qabstractbutton.h.D111D00590B87090.idx  qabstracteventdispatcher.h.C0190CCD4A8F1A77.idx  qaction.h.3983F099B797261A.idx  qalgorithms.h.C6ABBCFDE3B64278.idx  qanystringview.h.D6FDB20ABC8AB6A3.idx  (+177 more)
.github/scripts/: linux-bundle-appimage.sh  linux-bundle-native.sh  mac-bundle-app.sh  windows-bundle-installer.sh  windows-bundle-portable.sh  windows-bundle.sh
.github/workflows/: ci.yml
conan/profiles/: darwin  linux  windows
icons/: app_icon.icns
resources/: resources.qrc
resources/i18n/: MyApp_de.ts  MyApp_en.ts  MyApp_es.ts  MyApp_fr.ts  en_US.ts
resources/icons/: app_icon.icns
resources/styles/: windows_light.qss
resources/styles/windows/: dark.qss  light.qss
scripts/: app-icon.sh  build.sh  clean.sh  conan-lock-update.sh  configure-vscode.sh  dev-container.sh  env.sh  generate.sh  install_qt.sh  new-feature.sh  new-widget.sh  run.sh
src/: app.h  appconstants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/app_main_window/: AppMainWindow.cpp  AppMainWindow.h
src/appmainwindow/: AppMainWindow.cpp  AppMainWindow.h  AppMainWindow.ui
src/core/: IModel.h  IPersistenceProvider.h  interfacecommon.h
src/events/: EventBus.hpp  EventBusImpl.hpp  LogEvent.h  LogEvent.hpp  example.txt
src/events/bus/: EventBus.hpp  Subscription.hpp
src/events/system/: EventSystem.hpp
src/features/: IModel.h  IPresenter.h  IWidget.h  featurescommon.h
src/features/applog/: applogcommon.h
src/features/applog/model/: AppLogModel.cpp  AppLogModel.h  IAppLogModel.h
src/features/applog/presenter/: AppLogPresenter.cpp  AppLogPresenter.h  IAppLogPresenter.h
src/features/applog/widget/: AppLogWidget.cpp  AppLogWidget.h  AppLogWidget.ui  IAppLogWidget.h
src/features/counter/: CounterModel.cpp  CounterModel.h  CounterPresenter.cpp  CounterPresenter.h  CounterWidget.cpp  CounterWidget.h  ICounterModel.h  ICounterPresenter.h  ICounterWidget.h  countercommon.h
src/features/counter/model/: CounterModel.cpp  CounterModel.h  ICounterModel.h
src/features/counter/presenter/: CounterPresenter.cpp  CounterPresenter.h  ICounterPresenter.h
src/features/counter/widget/: CounterWidget.cpp  CounterWidget.h  CounterWidget.ui  ICounterWidget.h
src/logging/: logging.cpp  logging.h  messageHandler.cpp  messageHandler.h
src/platform/: FilePersistenceProvider.cpp  FilePersistenceProvider.h  flushFileBuffer.h
src/platform/core/: FilePersistenceProvider.cpp  FilePersistenceProvider.h
src/platform/theme/: theme.hpp
src/services/: ConsoleLogService.cpp  ConsoleLogService.hpp
src/services/registry/: ServiceRegistry.cpp  ServiceRegistry.hpp  registry.hpp
src/widgets/reusable/: IReusableWidget.h  ReusableWidget.cpp  ReusableWidget.h  ReusableWidget.ui  reusablecommon.h
tests/: CMakeLists.txt  CounterPresenter_test.cpp  main.cpp  sanity_test.cpp
tests/events/: EventsTest.cpp
tests/features/: AppLogTest.cpp  CounterTest.cpp
tests/features/applog/model/: AppLogModelTest.cpp
tests/features/applog/presenter/: AppLogPresenterTest.cpp
tests/features/applog/widget/: AppLogWidgetTest.cpp
tests/features/counter/model/: CounterModelTest.cpp
tests/features/counter/presenter/: CounterPresenterTest.cpp
tests/features/counter/widget/: CounterWidgetTest.cpp
tests/services/: ServicesTest.cpp
tests/widgets/reusable/: ReusableWidgetTest.cpp
